--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
@@ -43,6 +43,8 @@
 
 
     <div>
+                <input type="hidden" id="ProjectIDx"  value="@ViewBag.ProjectID" /> 
+
         <div class="col-md-12">
 
             <div class="row">
