--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndexA.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndexA.cshtml
@@ -345,13 +345,13 @@
             </div>
             <div class="row pb-3"> 
                 <div class="col-md-12 text-right">
-                    <button class="btn btn-warning btn-sm btnmodalone" data-modal="1">Actualizar información 1</button>
+                    @*<button class="btn btn-warning btn-sm btnmodalone" data-modal="1">Actualizar información 1</button>*@
                 </div>
                 <div class="col-md-12 contentA">
                      CONTENIDO IMG 1
                 </div>
                 <div class="col-md-12 text-right">
-                    <button class="btn btn-warning btn-sm btnmodaltwo" data-modal="2">Actualizar información 2</button>
+                    @*<button class="btn btn-warning btn-sm btnmodaltwo" data-modal="2">Actualizar información 2</button>*@
                 </div>
                 <div class="col-md-12 contentB">
                      CONTENIDO IMG 2
