PDF Ficha tecnica A.

--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndexA.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndexA.cshtml
@@ -85,6 +85,11 @@
                         </span>Detalle de Proyecto
                     </a>
                 </div>
+                <div class="col-md-12 text-right text-right">
+                    <button class="btn btn-social btn-tumblr btn-link" id="btnReportPDF">
+                        <i class="fas fa-file-pdf"></i> Exportar en PDF
+                    </button>
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
